# doc2md-helper

./: .gitignore  .opencode.json  .windsurfrules  CLAUDE.md  QUICKSTART.md  README.en.md  README.md  README.zh-CN.md  install.bat  mcp.json  mcp_config_example.json  pyproject.toml
.claude/: doc-converter.md  settings.json  settings.local.json
.claude/skills/convert-documents/: skill.md
.cursor/: mcp.json
demo/: test.docx
mcp_document_converter/: __init__.py  cli.py  docx2markdown.py  excel2markdown.py  pdf2markdown.py  pdf2markdown_markitdown.py  server.py  skills.py
