[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2md-helper"
version = "0.1.9"
description = "Document converter for converting PDF, DOCX, Excel to Markdown, with MCP support for Claude Code"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
keywords = ["document-converter", "pdf", "docx", "excel", "markdown", "mcp", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "fastmcp>=3.2.4",
    "markitdown[pdf]",
    "openpyxl",
    "python-docx",
    "mammoth",
]

[project.optional-dependencies]
marker = [
    "marker-pdf",
    "torch",
    "bitsandbytes",
    "PyPDF2",
]
all = [
    "doc2md-helper[marker]",
    "textract",
    "pandas",
    "pywin32",
]

[project.urls]
Homepage = "https://pypi.org/project/doc2md-helper/"

[project.scripts]
doc2md-helper = "mcp_document_converter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_document_converter"]

[tool.hatch.build.targets.sdist]
include = [
    "mcp_document_converter/",
    "skills/",
    ".claude/",
    "README.md",
    "pyproject.toml",
]
